--- a/package.json
+++ b/package.json
@@ -6,10 +6,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:scss": "stylelint styles/*.scss",
+    "fix:scss": "stylelint styles/*.scss --fix",
+    "lint:js": "eslint ./lib main.js",
+    "fix:js": "eslint ./lib main.js --fix",
+    "lint": "concurrently \"npm run lint:js\" \"npm run lint:scss\"",
+    "fix": "concurrently \"npm run fix:js\" \"npm run fix:scss\""
   },
   "devDependencies": {
-    "sass-embedded": "^1.81.0",
-    "vite": "^5.4.10"
+    "@eslint/js": "^9.14.0",
+    "concurrently": "^9.1.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
+    "sass-embedded": "^1.80.6",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
+    "vite": "^5.4.10",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-stylelint": "^5.3.1"
+  },
+  "dependencies": {
+    "stylelint-config-sass-guidelines": "^12.1.0"
   }
 }
+
